disable most tests for testing

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,15 +22,15 @@ jdk:
 - oraclejdk8
 - oraclejdk7
 env:
-  - CI_CATEGORY=UNIT_TESTS
-  - CI_CATEGORY=INTEGRATION_TESTS AKKA_VERSION=2.3.13 MONGO_PROFILE=default MONGO_VER=2_6 PLAY_VERSION=2.3.8
-  - CI_CATEGORY=INTEGRATION_TESTS AKKA_VERSION=2.3.13 MONGO_PROFILE=default MONGO_VER=3 PLAY_VERSION=2.3.8
-  - CI_CATEGORY=INTEGRATION_TESTS AKKA_VERSION=2.4.11 MONGO_PROFILE=default MONGO_VER=3 PLAY_VERSION=2.6.0
-  - CI_CATEGORY=INTEGRATION_TESTS AKKA_VERSION=2.4.11 MONGO_PROFILE=rs MONGO_VER=3 PLAY_VERSION=2.6.0
+#  - CI_CATEGORY=UNIT_TESTS
+#  - CI_CATEGORY=INTEGRATION_TESTS AKKA_VERSION=2.3.13 MONGO_PROFILE=default MONGO_VER=2_6 PLAY_VERSION=2.3.8
+#  - CI_CATEGORY=INTEGRATION_TESTS AKKA_VERSION=2.3.13 MONGO_PROFILE=default MONGO_VER=3 PLAY_VERSION=2.3.8
+#  - CI_CATEGORY=INTEGRATION_TESTS AKKA_VERSION=2.4.11 MONGO_PROFILE=default MONGO_VER=3 PLAY_VERSION=2.6.0
+#  - CI_CATEGORY=INTEGRATION_TESTS AKKA_VERSION=2.4.11 MONGO_PROFILE=rs MONGO_VER=3 PLAY_VERSION=2.6.0
   - CI_CATEGORY=INTEGRATION_TESTS AKKA_VERSION=2.4.11 MONGO_PROFILE=default MONGO_VER=3_4 PLAY_VERSION=2.6.0
   - CI_CATEGORY=INTEGRATION_TESTS AKKA_VERSION=2.4.11 MONGO_PROFILE=self-ssl MONGO_VER=3_4 PLAY_VERSION=2.6.0
   - CI_CATEGORY=INTEGRATION_TESTS AKKA_VERSION=2.4.11 MONGO_PROFILE=mutual-ssl MONGO_VER=3_4 PLAY_VERSION=2.6.0
-  - CI_CATEGORY=INTEGRATION_TESTS AKKA_VERSION=2.4.11 MONGO_PROFILE=rs MONGO_VER=3_4 PLAY_VERSION=2.6.0
+#  - CI_CATEGORY=INTEGRATION_TESTS AKKA_VERSION=2.4.11 MONGO_PROFILE=rs MONGO_VER=3_4 PLAY_VERSION=2.6.0
 matrix: 
   exclude: 
     - scala: 2.10.5
